# tabbed

./: .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  develop.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  reader.py  sniffer.py  sniffing.py  tabs.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  features.yml  question.yml
.github/workflows/: linting.yml  manuscript.yml  testing.yml  typing.yml
about/: index.html
docs/: about.md  getting_started.md  index.md  installation.md
docs/reference/: parsing.md  reading.md  reference.md  sniffing.md  tabbing.md
getting_started/: index.html
installation/: index.html
paper/: paper.bib  paper.md  plots.py
reference/parsing/: index.html
reference/reading/: index.html
reference/reference/: index.html
reference/sniffing/: index.html
reference/tabbing/: index.html
search/: search_index.json
src/tabbed/: __init__.py  reader.py  reading.py  sniffing.py  tabbing.py  tabs.py
src/tabbed/utils/: celltyping.py  parsing.py
tests/: _test_sniffing.py  conftest.py  helpers.py  shared_helper.py  test_convert.py  test_datetimes.py  test_gens.py  test_numeric.py  test_parsing.py  test_reading.py  test_sniffer.py  test_sniffing.py  test_tabbing.py
tests/prior/: conftest.py  test_convert.py  test_numeric.py
utils/: celltyping.py  containers.py  filters.py  parsing.py  queues.py  sniffers.py  tabtypes.py  tabulation.py  typings.py
