[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabbed"
version = "1.0.0"
description = """
An iterative reader of irregular text files supporting selective
value-based reading of rows and columns.
"""
readme = "README.md"
authors =[{ name="Matthew Caudill", email="mscaudill@gmail.com" }]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
keywords = [
    "text",
    "delimited",
    "csv",
    "tsv"
]
dependencies = ["clevercsv"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
    "mypy",
    "pylint",
    "isort",
    "codespell",
    "black",
    "bumpver",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "pip-tools",
    "build",
    "twine"
]
linting = ["codespell", "isort", "pylint", "black"]
testing = ["pytest"]

[project.urls]
Homepage = "https://github.com/mscaudill/tabbed"

# bumpver configuration
[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = 'bump version {old_version} -> {new_version}'
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/tabbed/__init__.py" = ['__version__ = "{version}"']

# inform type checkers tabbed supports annotations
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tabbed = ["py.typed"]

# mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# 3rd party's without annotations
module = []
ignore_missing_imports = true

# pylint configuration
[tool.pylint.design]
max-attributes = 10
max-args = 10
max-locals = 30

[tool.pylint.basic]
argument-naming-style = "any"
variable-naming-style = "any"
attr-naming-style = "any"

[tool.pylint.messages_control]
disable = ["ungrouped-imports"]

[tool.isort]
profile = 'black'
line_length = 80

[tool.codespell]
skip = '*.txt,*.ipynb, tests, ./src/tabbed.egg-info'
before-context = 3
after-context = 3
quiet-level = 3

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
